force-app/main/default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <description>Service contains the definition of a service. Service is related to Service Attribute, Service Exception, Service Question, Service Question Defined Response, Retailer Service, Retailer Service Equipment, and Project Service.</description>
    <label>Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>