force-app/main/default/objects/Service__c/fields/AllowDistribution__c.field-meta.xml
<CustomField>
    <fullName>AllowDistribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when adding Distribution Check service, set flag so that distribution repository is checked at each Location.</description>
    <inlineHelpText>Checking Allow Distribution will add the attributes to the service level for the user to specify using Distribution  check.</inlineHelpText>
    <label>Allow Product Filtering by Location</label>
    <type>Checkbox</type>
</CustomField>