force-app/main/default/objects/Service__c/fields/AllowedTargetUse__c.field-meta.xml
<CustomField>
    <fullName>AllowedTargetUse__c</fullName>
    <label>Allowed Target Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Ingredients</fullName>
            </value>
            <value>
                <fullName>Analytics Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>