force-app/main/default/objects/Service__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Total duration of the scheduled service event.</inlineHelpText>
    <label>Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>