force-app/main/default/objects/Service__c/fields/ExceptionPrompt__c.field-meta.xml
<CustomField>
    <fullName>ExceptionPrompt__c</fullName>
    <defaultValue>&quot;Were you able to do the work?&quot;</defaultValue>
    <description>Text for the prompt asking about the execution status of the service.</description>
    <inlineHelpText>Text for the prompt asking about the execution status of the service.</inlineHelpText>
    <label>Exception Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>