force-app/main/default/objects/Service__c/fields/isBillable__c.field-meta.xml
<CustomField>
    <fullName>isBillable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>