force-app/main/default/objects/Service__c/fields/isBulkscan__c.field-meta.xml
<CustomField>
    <fullName>isBulkscan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Bulk Scan Feature</label>
    <type>Checkbox</type>
</CustomField>