force-app/main/default/objects/Service__c/fields/IsExcludedForSuccessRate__c.field-meta.xml
<CustomField>
    <fullName>IsExcludedForSuccessRate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The indicator to the system if this service is excluded for the success rate calculation</description>
    <inlineHelpText>The indicator to the system if this service is excluded for the success rate calculation</inlineHelpText>
    <label>Do Not Include in Success Rate</label>
    <type>Checkbox</type>
</CustomField>