force-app/main/default/objects/Service__c/fields/IsNumberOfWorkersRequired__c.field-meta.xml
<CustomField>
    <fullName>IsNumberOfWorkersRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It can be used when there is team service on a project</description>
    <inlineHelpText>Enter number of workers required for this team service</inlineHelpText>
    <label>Allow Multiple Workers</label>
    <type>Checkbox</type>
</CustomField>