force-app/main/default/objects/Service__c/fields/isSelfDirected__c.field-meta.xml
<CustomField>
    <fullName>isSelfDirected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses Self-Directed Feature</label>
    <type>Checkbox</type>
</CustomField>