force-app/main/default/objects/Service__c/fields/IsSingleService__c.field-meta.xml
<CustomField>
    <fullName>IsSingleService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Single Service</label>
    <type>Checkbox</type>
</CustomField>