force-app/main/default/objects/Service__c/fields/isVisibleToClient__c.field-meta.xml
<CustomField>
    <fullName>isVisibleToClient__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is Service Visible to Supplier</description>
    <inlineHelpText>The field indicates if the service is visible to the supplier</inlineHelpText>
    <label>Is Visible to Client</label>
    <type>Checkbox</type>
</CustomField>