force-app/main/default/objects/Service__c/fields/JobManualTemplate__c.field-meta.xml
<CustomField>
    <fullName>JobManualTemplate__c</fullName>
    <label>JobManualTemplate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Manual</fullName>
                <default>true</default>
                <label>No Manual</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>