force-app/main/default/objects/Service__c/fields/LimitQuestionstoFamily__c.field-meta.xml
<CustomField>
    <fullName>LimitQuestionstoFamily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limit Questions to Family</label>
    <type>Checkbox</type>
</CustomField>