force-app/main/default/objects/Service__c/fields/NoSurvey__c.field-meta.xml
<CustomField>
    <fullName>NoSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this service template will not have any survey Questions.</description>
    <label>No Survey</label>
    <type>Checkbox</type>
</CustomField>