force-app/main/default/objects/Service__c/fields/ServiceFamily__c.field-meta.xml
<CustomField>
    <fullName>ServiceFamily__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Family</label>
    <referenceTo>ServiceFamily__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>