force-app/main/default/objects/Service__c/fields/SurveyTemplateVersion__c.field-meta.xml
<CustomField>
    <fullName>SurveyTemplateVersion__c</fullName>
    <label>Survey Template Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V1</fullName>
                <default>true</default>
                <label>V1</label>
            </value>
            <value>
                <fullName>V2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>