force-app/main/default/objects/Service__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <label>Target Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
                <default>true</default>
                <label>Product</label>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>